# ML_LaLiga

./: .gitignore  BRIEF.md  CLAUDE.md  README.md  SPEC.md  pyproject.toml
app/: dashboard.py
config/: settings.toml  teams.toml
docs/: diccionario-features.md
docs/decisions/: 001-stack-y-layout-del-proyecto.md  002-esquema-sqlite-e-identificadores.md  003-fuentes-de-datos-fase-1.md  004-cache-local-y-rate-limiting.md  005-mapeo-de-nombres-de-equipos.md  006-jornada-aproximada.md  007-ingesta-en-local-por-restriccion-de-red.md  008-xg-de-fbref-en-vez-de-understat.md  009-transporte-tls-curl-cffi-para-fbref.md  010-fallback-wayback-machine-para-fbref.md  011-understat-via-api-interna-como-relleno-de-xg.md  012-feature-set-v1-y-dependencias-f2.md  013-elo-interno.md  014-baselines-y-evaluacion-walk-forward.md  015-dixon-coles.md  016-lightgbm-variantes.md  017-calibracion-y-ensemble.md  018-backtest-y-registro.md  019-ensemble-apilado-y-xi-por-validacion.md  020-componente-lineal-y-calibracion-dc.md  021-regularizacion-del-lineal-por-validacion.md  022-calibracion-loso-para-pesos-del-apilado.md  023-simulador-monte-carlo.md  024-explicabilidad-shap-nativo-y-ablation.md  025-dashboard-streamlit.md  026-modo-temporada-y-calendario.md
docs/reports/: backtest_20260712.md  backtest_20260713.md  baselines_20260710.md  feature_importance.md
src/alaves_predictor/: __init__.py  cli.py  config.py
src/alaves_predictor/dashboard/: __init__.py  data.py
src/alaves_predictor/etl/: __init__.py  db.py  errors.py  http_cache.py  ingest.py  teams.py  validate.py
src/alaves_predictor/etl/sources/: __init__.py  clubelo.py  fbref.py  football_data.py  understat.py
src/alaves_predictor/evaluation/: __init__.py  backtest.py  baselines.py  metrics.py  season.py
src/alaves_predictor/explain/: __init__.py  ablation.py  importance.py  report.py
src/alaves_predictor/features/: __init__.py  build.py  dictionary.py  elo.py  form.py
src/alaves_predictor/models/: __init__.py  calibration.py  dixon_coles.py  ensemble.py  gbm_classifier.py  linear.py  train.py
src/alaves_predictor/simulation/: __init__.py  monte_carlo.py  project.py
tests/: conftest.py  test_backtest.py  test_baselines.py  test_calibracion.py  test_config.py  test_dashboard_data.py  test_db.py  test_dictionary.py  test_dixon_coles.py  test_elo_interno.py  test_ensemble.py  test_entrenamiento.py  test_explain.py  test_features.py  test_gbm.py  test_http_cache.py  test_ingest.py  test_linear.py  test_matchday.py  test_metrics.py  test_monte_carlo.py  test_pesos_apilado.py  test_sources.py  test_teams.py
tests/fixtures/: clubelo_Alaves.csv  clubelo_Barcelona.csv  clubelo_Getafe.csv  clubelo_Sociedad.csv  fbref_schedule_mini.html  football_data_fixtures_mini.csv  football_data_mini.csv  understat_league_mini.json  understat_mini.html
