[project]
name = "alaves-predictor"
version = "0.1.0"
description = "Predictor probabilístico de partidos del Deportivo Alavés — LaLiga 2026-27"
readme = "README.md"
requires-python = ">=3.11"
# Política de dependencias (ADR-001): solo se añade una librería cuando la fase
# que la usa se implementa. F1 (ETL): httpx, pydantic, typer,
# beautifulsoup4 (parseo FBref, ADR-008) y curl-cffi (huella TLS, ADR-009).
# F3 (modelos): lightgbm y scipy (ADR-016; scipy ya llegaba transitivo con
# scikit-learn, se declara porque el Dixon-Coles lo llama directamente).
# F5 (explicabilidad): matplotlib para los gráficos del informe. Los valores
# SHAP se calculan con el TreeSHAP nativo de LightGBM, sin la librería `shap`
# (su cadena numba choca con numpy 2.x y Python 3.11+; ADR-024).
# F6 (dashboard): streamlit y plotly (ADR-025).
# F7 (modo temporada): sin dependencias nuevas — el calendario se obtiene del
# fixtures.csv de football-data con el adaptador existente (ADR-026).
dependencies = [
    "beautifulsoup4>=4.15.0",
    "curl-cffi>=0.15.0",
    "httpx>=0.27",
    "lightgbm>=4.6.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "pyarrow>=25.0.0",
    "pydantic>=2.5",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "streamlit>=1.59.1",
    "typer>=0.12",
]

[project.scripts]
alaves = "alaves_predictor.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alaves_predictor"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errores
    "W",   # pycodestyle avisos
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
